syntax = "proto3";

package ru.otus.protobuf.generated;

option java_multiple_files = true;

message UserMessage {
    int64 id = 1;
    string name = 2;
    string address = 3;
    string phones = 4;
}

message UserIdQuery{
    int64 id = 1;
}

message Empty {}

service RemoteUserService {
    rpc getUser(UserIdQuery) returns (UserMessage);

    rpc findAllUsers(Empty) returns (stream UserMessage);

    rpc saveUser(UserMessage) returns (UserMessage);
}
